# rsync-assistant

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
app/: main.cpp
include/rsync_assistant/: benchmark_cache.hpp  directory_scanner.hpp  endpoint.hpp  endpoint_benchmark.hpp  process_runner.hpp  project_profile.hpp  rsync_locator.hpp  selection_manifest.hpp  settings.hpp  task_control_service.hpp  task_control_socket.hpp  transport_selector.hpp
scripts/: build-linux.sh  build-macos.sh
src/: benchmark_cache.cpp  directory_scanner.cpp  endpoint.cpp  endpoint_benchmark.cpp  process_runner.cpp  project_profile.cpp  rsync_locator.cpp  selection_manifest.cpp  settings.cpp  task_control_service.cpp  task_control_socket.cpp  transport_selector.cpp
tests/: endpoint_test.cpp  task_control_service_test.cpp
